# Warp

./: .clang-format  .gitignore  CMakeLists.txt  CreateVisualStudioProject.bat  LICENSE  README.md  Unix-Build.sh  Unix-Clean.sh  Windows-Clean.bat
Warp/Common/: CommonTypes.h
Warp/Debugging/: Assert.h
Warp/Engine/: EntryPoint.h  UserApplication.h
Warp/Engine/Common/: CommonTypes.h
Warp/Engine/Core/: GameTimer.cpp  GameTimer.h  WarpEngine.cpp  WarpEngine.h
Warp/Engine/Core/ECS/: Archetype.h  Component.h  Entity.h  System.h  World.h
Warp/Engine/Core/ECS/Components/: CameraComponent.h  LightComponent.h  MeshComponent.h  OrbitComponent.h  SkyComponent.h  SkyLightComponent.h  TransformComponent.h
Warp/Engine/Core/ECS/Private/: Archetype.cpp  Component.cpp  World.cpp
Warp/Engine/Core/ECS/Systems/: FreeCamSystem.h  OrbitSystem.h
Warp/Engine/Core/ECS/Systems/Private/: FreeCamSystem.cpp  OrbitSystem.cpp
Warp/Engine/Debugging/: Assert.h  GPUMarker.h  Logging.h  RenderDocCapture.h
Warp/Engine/Debugging/Private/: Logging.cpp
Warp/Engine/Events/: DelegateDefs.h
Warp/Engine/Input/: Input.cpp  Input.h
Warp/Engine/Math/: Math.h  MathHelper.h
Warp/Engine/Memory/: AllocationManager.h  Arena.h  RingBuffer.cpp  RingBuffer.h
Warp/Engine/Rendering/: RenderBackend.h
Warp/Engine/Rendering/Cameras/: Camera.h  FreeCam.cpp  FreeCam.h
Warp/Engine/Rendering/Lighting/: LightData.h
Warp/Engine/Rendering/Mesh/: GeoGenerator.h  Mesh.h  MeshLoader.h
Warp/Engine/Rendering/Mesh/Private/: GeoGenerator.cpp  MeshLoader.cpp
Warp/Engine/Rendering/Renderer/: Buffer.h  CommandList.h  CommandQueue.h  DescriptorHandle.h  Device.h  DrawList.h  Fence.h  Pipeline.h  Renderer.cpp  Renderer.h  Resource.h  ResourceState.h  Shader.h  SwapChain.h  Texture.h  TextureUpload.h  UploadBuffer.h
Warp/Engine/Rendering/Renderer/Platform/Linux/: LinuxRenderBackend.cpp  LinuxWindow.cpp  LinuxWindow.h
Warp/Engine/Rendering/Renderer/Platform/Vulkan/: VKBuffer.h  VKCommandList.h  VKCommandQueue.h  VKCommon.h  VKDevice.h  VKFence.h  VKPipeline.h  VKRenderer.h  VKShader.h  VKSwapChain.h  VKTexture.h  VKTranslate.h  VKUploadBuffer.h
Warp/Engine/Rendering/Renderer/Platform/Vulkan/Private/: VKBuffer.cpp  VKCommandList.cpp  VKCommandQueue.cpp  VKDevice.cpp  VKFence.cpp  VKMemory.cpp  VKPipeline.cpp  VKRenderer.cpp  VKShader.cpp  VKSwapChain.cpp  VKTexture.cpp  VKUploadBuffer.cpp
Warp/Engine/Rendering/Renderer/Platform/Windows/: WindowsRenderBackend.cpp  WindowsWindow.cpp  WindowsWindow.h
Warp/Engine/Rendering/Renderer/Platform/Windows/D3D12/: D3D12Buffer.h  D3D12CommandList.h  D3D12CommandQueue.h  D3D12DescriptorHeap.h  D3D12Device.h  D3D12Fence.h  D3D12ImGuiBackend.h  D3D12Pipeline.h  D3D12Renderer.h  D3D12Shader.h  D3D12SwapChain.h  D3D12Texture.h  D3D12Translate.h  D3D12UploadBuffer.h
Warp/Engine/Rendering/Renderer/Platform/Windows/D3D12/Private/: D3D12Buffer.cpp  D3D12CommandList.cpp  D3D12CommandQueue.cpp  D3D12Device.cpp  D3D12Fence.cpp  D3D12ImGuiBackend.cpp  D3D12Pipeline.cpp  D3D12Renderer.cpp  D3D12Shader.cpp  D3D12SwapChain.cpp  D3D12Texture.cpp  D3D12UploadBuffer.cpp  D3D12UploadHeap.cpp  D3DRenderer.cpp
Warp/Engine/Rendering/Resource/: MeshResource.h  ResourceManager.h  ResourceState.h  TextureResource.h
Warp/Engine/Rendering/Resource/Private/: ResourceManager.cpp
Warp/Engine/Rendering/Texture/: TextureData.h  TextureLoader.h
Warp/Engine/Rendering/Texture/Private/: TextureLoader.cpp
Warp/Engine/Rendering/Window/: Window.h
Warp/Engine/Threading/: BufferedContainer.h  Futex.h  ThreadPool.h
Warp/Engine/Threading/Private/: Futex.cpp
Warp/Engine/UI/: ComponentDescriptor.h  EditorUI.h  ImGuiBackend.h
Warp/Engine/UI/Private/: ComponentDescriptor.cpp  ComponentUI.cpp  EditorUI.cpp
Warp/EntryPoint/: EntryPoint.h
Warp/Rendering/Renderer/: Buffer.h  Renderer.h  Resource.h
Warp/Rendering/Renderer/Platform/D3D12/Private/: D3D12Buffer.cpp  D3D12ResourceViewHeap.cpp
Warp/Rendering/Renderer/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Warp/Rendering/Window/: Window.h
Warp/Shaders/: DeferredGeometry.hlsl  DeferredLighting.hlsl  DirectionalShadow.hlsl  Mesh.hlsl  TestTriangle.hlsl
Warp/TestBed/: TestBedApp.cpp  main.cpp
Warp/Threading/: Semaphore.h
cmake/: sal.h
